Add header and start on logo

--- a/sass/_theme_layout.sass
+++ b/sass/_theme_layout.sass
@@ -1,3 +1,14 @@
+.librato-header
+  height: 80px
+  background-color: #262626
+
+.logo
+  width: 190px
+  height: 59px
+  margin-top: 5px
+  padding-top: 5px
+  padding-left: 5px
+
 .wy-affix
   position: fixed
   top: $gutter
@@ -258,7 +269,7 @@
 
 .wy-nav-side
   position: fixed
-  top: 0
+  top: 80px
   bottom: 0
   left: 0
   padding-bottom: 2em
