--- a/sass/_theme_font_local.sass
+++ b/sass/_theme_font_local.sass
@@ -34,3 +34,8 @@
   font-weight: 700
   src: local('Roboto Slab Bold'), local('RobotoSlab-Bold'), url(../fonts/RobotoSlab-Bold.ttf) format('truetype')
 
+@font-face
+  font-family: 'Proxima Nova'
+  font-style: normal
+  font-weight: 400
+  src: local('Proxima Nova'), local('ProximaNova-Reg-webfont'), url(../fonts/ProximaNova-Red-webfont.ttf) format('truetype')
