Tmp header position

--- a/sass/_theme_layout.sass
+++ b/sass/_theme_layout.sass
@@ -1,6 +1,18 @@
 .librato-header
   height: 80px
   background-color: #262626
+  padding-top: 10px
+  padding-left: 10px
+
+.header-menu 
+  float: right
+  padding-top: 10px
+  padding-right: 20px
+  a
+    color: $white
+    padding-right: 10px
+    &:hover
+      color: darken($menu-vertical-background-color, 15%)
 
 .logo
   width: 190px
