--- a/sphinx_rtd_theme/static/css/theme.css
+++ b/sphinx_rtd_theme/static/css/theme.css
@@ -4206,6 +4206,21 @@ div[class^='highlight'] pre {
 .librato-header {
   height: 80px;
   background-color: #262626;
+  padding-top: 10px;
+  padding-left: 10px;
+}
+
+.header-menu {
+  float: right;
+  padding-top: 10px;
+  padding-right: 20px;
+}
+.header-menu a {
+  color: #fff;
+  padding-right: 10px;
+}
+.header-menu a:hover {
+  color: #d6d6d6;
 }
 
 .logo {
