Fix for sidebar position

--- a/sass/_theme_layout.sass
+++ b/sass/_theme_layout.sass
@@ -287,8 +287,7 @@
   height: 100%
 
 .wy-nav-side
-  position: fixed
-  top: 80px
+  position: absolute
   bottom: 0
   left: 0
   padding-bottom: 2em
