Fix icon, header and make sidebar like slate site.

--- a/sass/_theme_librato.sass
+++ b/sass/_theme_librato.sass
@@ -10,3 +10,37 @@ h2
   text-rendering: auto
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
+
+.btn-librato-marketing
+  background-color: #0f80aa
+  color: #fff !important
+  border-top-left-radius: 8px
+  border-top-right-radius: 0px
+  border-bottom-right-radius: 8px
+  border-bottom-left-radius: 0px
+  text-align: center
+  margin-right: 10px
+  padding: 7px 20px !important
+ 
+ 
+.btn-librato-marketing-yellow 
+  background-color: #DCAF1B
+  color: #fff !important
+  border-top-left-radius: 8px
+  border-top-right-radius: 0px
+  border-bottom-right-radius: 8px
+  border-bottom-left-radius: 0px
+  text-align: center
+  margin-right: 10px
+  padding: 7px 20px
+
+.btn-librato 
+  background-color: #337AB7 !important
+  background-color: #0f80aa !important
+  color: #ffffff !important
+  border: none
+
+.btn-librato:hover 
+  background-color: #2d6da3 !important
+  background-color: #0d6e93 !important
+  color: #ffffff
