--- a/sass/_theme_layout.sass
+++ b/sass/_theme_layout.sass
@@ -67,6 +67,10 @@
     font-size: 80%
     color: $menu-color
     white-space: nowrap
+    text-rendering: auto
+    -webkit-font-smoothing: antialiased
+    -moz-osx-font-smoothing: grayscale
+    font-weight: 100
 
   ul
     margin-bottom: 0
@@ -82,7 +86,7 @@
         border-right: solid 1px darken($menu-vertical-background-color, 20%)
         padding: $gutter / 4 $gutter * 1.5
         &:hover
-          background: darken($menu-vertical-background-color, 15%)
+          background: $librato-yellow
     code
       border: none
       background: inherit
@@ -102,18 +106,18 @@
 
   // On state for the first level
   li.on a, li.current > a
-    color: $menu-link-color
-    padding: $gutter / 4 $gutter
+    color: #fff
+    padding: $gutter / 2 $gutter
     font-weight: bold
     position: relative
-    background: $menu-vertical-background-color
+    background: $librato-yellow
     border: none
     border-bottom: solid 1px darken($menu-vertical-background-color, 20%)
     border-top: solid 1px darken($menu-vertical-background-color, 20%)
     padding-left: $gutter -4px
     +font-smooth
     &:hover
-      background: $menu-vertical-background-color
+      background: $librato-yellow
       span.toctree-expand
         color: $menu-link-medium
     span.toctree-expand
@@ -133,16 +137,16 @@
   li.toctree-l2
     &.current
       > a
-        background: darken($menu-vertical-background-color, 20%)
+        background: $librato-yellow
         padding: $gutter / 4 $gutter * 1.5
       li.toctree-l3 > a
         display: block
-        background: darken($menu-vertical-background-color, 20%)
+        background: $librato-yellow
         padding: $gutter / 4 $gutter * 2.5
     a:hover span.toctree-expand
       color: $menu-link-medium
     span.toctree-expand
-      color: darken($menu-vertical-background-color, 35%)
+      color: $librato-yellow
   li.toctree-l3
     font-size: .9em
     &.current
@@ -177,20 +181,25 @@
   a
     display: inline-block
     line-height: 18px
-    padding: $gutter / 4 $gutter
+    padding: $gutter / 2 $gutter
     display: block
     position: relative
-    font-size: 90%
-    color: $menu-link-light
+    font-size: 80%
+    color: #0d81ab
+    font-weight: 100
+    +font-smooth
     &:hover
-      background-color: lighten($menu-background-color, 10%)
+      background-color: $librato-yellow
       cursor: pointer
+      color: #fff
+      +font-smooth
       span.toctree-expand
         color: $menu-link-light
     &:active
       background-color: $menu-logo-color
       cursor: pointer
       color: $menu-link-active
+      +font-smooth
       span.toctree-expand
         color: $menu-link-active
 
@@ -206,6 +215,7 @@
   display: block
   color: $nav-search-color
   margin-bottom: $gutter / 2
+  font-weight: 100
   input[type=text]
     width: 100%
     border-radius: 5px
@@ -222,7 +232,7 @@
   > a, .wy-dropdown > a
     color: $nav-search-color
     font-size: 100%
-    font-weight: bold
+    font-weight: 100
     display: inline-block
     padding: $base-line-height / 6 $base-line-height / 4
     margin-bottom: $gutter / 2
