--- a/sass/_theme_librato.sass
+++ b/sass/_theme_librato.sass
@@ -32,7 +32,7 @@ h2
   border-bottom-left-radius: 0px
   text-align: center
   margin-right: 10px
-  padding: 7px 20px
+  padding: 7px 20px !important
 
 .btn-librato 
   background-color: #337AB7 !important
