--- a/sphinx_rtd_theme/static/css/theme.css
+++ b/sphinx_rtd_theme/static/css/theme.css
@@ -5205,7 +5205,7 @@ h2, .rst-content .toctree-wrapper p.caption {
   border-bottom-left-radius: 0px;
   text-align: center;
   margin-right: 10px;
-  padding: 7px 20px;
+  padding: 7px 20px !important;
 }
 
 .btn-librato {
