Updates to footer.

--- a/sass/_theme_librato.sass
+++ b/sass/_theme_librato.sass
@@ -44,3 +44,8 @@ h2
   background-color: #2d6da3 !important
   background-color: #0d6e93 !important
   color: #ffffff
+
+.small-footer
+  font-size: 12px
+  a
+    color: #4A4A4A
