A fix for the sidebar scroll issue

--- a/sass/_theme_layout.sass
+++ b/sass/_theme_layout.sass
@@ -20,6 +20,10 @@
     +font-smooth
     &:hover
       color: lighten($menu-vertical-background-color, 15%)
+  
+
+.header-menu .active
+  color: lighten($menu-vertical-background-color, 15%)
 
 .logo
   width: 190px
@@ -300,6 +304,7 @@
   position: absolute
   bottom: 0
   left: 0
+  top: 0
   padding-bottom: 2em
   width: $nav-desktop-width
   overflow-x: hidden
