--- a/sass/_theme_librato.sass
+++ b/sass/_theme_librato.sass
@@ -21,6 +21,7 @@ h2
   text-align: center
   margin-right: 10px
   padding: 7px 20px !important
+  margin-left: 15px
  
  
 .btn-librato-marketing-yellow 
@@ -31,7 +32,8 @@ h2
   border-bottom-right-radius: 8px
   border-bottom-left-radius: 0px
   text-align: center
-  margin-right: 10px
+  margin-right: 8px
+  margin-left: 6px
   padding: 7px 20px !important
 
 .btn-librato 
