--- a/sphinx_rtd_theme/static/css/theme.css
+++ b/sphinx_rtd_theme/static/css/theme.css
@@ -4190,15 +4190,15 @@ div[class^='highlight'] pre {
   }
 }
 .librato-header {
-  height: 80px;
-  background-color: #262626;
-  padding-top: 10px;
-  padding-left: 10px;
+  height: 89px;
+  background-color: #252525;
+  padding-top: 15px;
+  padding-left: 15px;
 }
 
 .header-menu {
   float: right;
-  padding-top: 10px;
+  padding-top: 8px;
   padding-right: 20px;
 }
 .header-menu li {
@@ -5197,6 +5197,7 @@ h2, .rst-content .toctree-wrapper p.caption {
   text-align: center;
   margin-right: 10px;
   padding: 7px 20px !important;
+  margin-left: 15px;
 }
 
 .btn-librato-marketing-yellow {
@@ -5207,7 +5208,8 @@ h2, .rst-content .toctree-wrapper p.caption {
   border-bottom-right-radius: 8px;
   border-bottom-left-radius: 0px;
   text-align: center;
-  margin-right: 10px;
+  margin-right: 8px;
+  margin-left: 6px;
   padding: 7px 20px !important;
 }
 
