tone down search highlighting

--- a/sass/_theme_rst.sass
+++ b/sass/_theme_rst.sass
@@ -142,9 +142,9 @@
       font-size: 100%
   // Sphinx can highlight searched text with ?highlighted=searchterm
   .highlighted
-    background: $highlight-color
+    background: #fff1c2
     display: inline-block
-    font-weight: bold
+    font-weight: normal
     padding: 0 $base-line-height / 4
 
   // These are the little citation links [1] that show up within paragraphs.
