--- a/sass/_theme_variables.sass
+++ b/sass/_theme_variables.sass
@@ -52,7 +52,7 @@ $sidebar-border-color:                $table-border-color
 $sidebar-title-background-color:      $table-border-color
 
 // Sphinx highlight color
-$highlight-color:                     $yellow
+$highlight-color:                     #fff1c2
 
 $base-font-family:                    "Proxima Nova", "Helvetica Neue", Arial, sans-serif
 $custom-font-family:                  "Proxima Nova", "ff-tisa-web-pro", "Georgia", Arial, sans-serif
