--- a/sass/_theme_layout.sass
+++ b/sass/_theme_layout.sass
@@ -20,6 +20,8 @@
     +font-smooth
     &:hover
       color: lighten($menu-vertical-background-color, 15%)
+    &:visited
+      color: #999999
   
 
 .header-menu .active
@@ -241,6 +243,8 @@
     +font-smooth
     &:hover
       background: rgba(255,255,255,.1)
+    &:visited
+      color: #fff
     img.logo
       display: block  // display on its own line all the time
       margin: 0 auto
