--- a/sass/_theme_variables.sass
+++ b/sass/_theme_variables.sass
@@ -41,7 +41,7 @@ $nav-background-color:                #EEEEEE
 $nav-search-background-color:         #1A80A7
 $nav-search-color:                    $section-background-color
 $nav-link-color:                      $blue
-$nav-link-color-visited:              $purple
+$nav-link-color-visited:              $text-color
 $nav-link-color-hover:                lighten($nav-link-color, 6%) !default
 $nav-link-color-alt:                  hsl(33, 100%, 51%)
 $librato-yellow:                      #E6B71D
