--- a/sphinx_rtd_theme/static/css/theme.css
+++ b/sphinx_rtd_theme/static/css/theme.css
@@ -2566,7 +2566,7 @@ a .fa, a .wy-menu-vertical li span.toctree-expand, .wy-menu-vertical li a span.t
   padding: 12px;
   line-height: 24px;
   margin-bottom: 24px;
-  background: #e7f2fa;
+  background: #bfe9f9;
 }
 
 .wy-alert-title, .rst-content .admonition-title {
@@ -2574,7 +2574,7 @@ a .fa, a .wy-menu-vertical li span.toctree-expand, .wy-menu-vertical li a span.t
   font-weight: bold;
   display: block;
   color: #fff;
-  background: #6ab0de;
+  background: #32baed;
   margin: -12px;
   padding: 6px 12px;
   margin-bottom: 12px;
@@ -2595,10 +2595,10 @@ a .fa, a .wy-menu-vertical li span.toctree-expand, .wy-menu-vertical li a span.t
 }
 
 .wy-alert.wy-alert-info, .rst-content .note, .rst-content .wy-alert-info.attention, .rst-content .wy-alert-info.caution, .rst-content .wy-alert-info.danger, .rst-content .wy-alert-info.error, .rst-content .wy-alert-info.hint, .rst-content .wy-alert-info.important, .rst-content .wy-alert-info.tip, .rst-content .wy-alert-info.warning, .rst-content .seealso, .rst-content .wy-alert-info.admonition-todo {
-  background: #e7f2fa;
+  background: #bfe9f9;
 }
 .wy-alert.wy-alert-info .wy-alert-title, .rst-content .note .wy-alert-title, .rst-content .wy-alert-info.attention .wy-alert-title, .rst-content .wy-alert-info.caution .wy-alert-title, .rst-content .wy-alert-info.danger .wy-alert-title, .rst-content .wy-alert-info.error .wy-alert-title, .rst-content .wy-alert-info.hint .wy-alert-title, .rst-content .wy-alert-info.important .wy-alert-title, .rst-content .wy-alert-info.tip .wy-alert-title, .rst-content .wy-alert-info.warning .wy-alert-title, .rst-content .seealso .wy-alert-title, .rst-content .wy-alert-info.admonition-todo .wy-alert-title, .wy-alert.wy-alert-info .rst-content .admonition-title, .rst-content .wy-alert.wy-alert-info .admonition-title, .rst-content .note .admonition-title, .rst-content .wy-alert-info.attention .admonition-title, .rst-content .wy-alert-info.caution .admonition-title, .rst-content .wy-alert-info.danger .admonition-title, .rst-content .wy-alert-info.error .admonition-title, .rst-content .wy-alert-info.hint .admonition-title, .rst-content .wy-alert-info.important .admonition-title, .rst-content .wy-alert-info.tip .admonition-title, .rst-content .wy-alert-info.warning .admonition-title, .rst-content .seealso .admonition-title, .rst-content .wy-alert-info.admonition-todo .admonition-title {
-  background: #6ab0de;
+  background: #32baed;
 }
 
 .wy-alert.wy-alert-success, .rst-content .wy-alert-success.note, .rst-content .wy-alert-success.attention, .rst-content .wy-alert-success.caution, .rst-content .wy-alert-success.danger, .rst-content .wy-alert-success.error, .rst-content .hint, .rst-content .important, .rst-content .tip, .rst-content .wy-alert-success.warning, .rst-content .wy-alert-success.seealso, .rst-content .wy-alert-success.admonition-todo {
@@ -2616,7 +2616,7 @@ a .fa, a .wy-menu-vertical li span.toctree-expand, .wy-menu-vertical li a span.t
   background: #e1e4e5;
 }
 .wy-alert.wy-alert-neutral a, .rst-content .wy-alert-neutral.note a, .rst-content .wy-alert-neutral.attention a, .rst-content .wy-alert-neutral.caution a, .rst-content .wy-alert-neutral.danger a, .rst-content .wy-alert-neutral.error a, .rst-content .wy-alert-neutral.hint a, .rst-content .wy-alert-neutral.important a, .rst-content .wy-alert-neutral.tip a, .rst-content .wy-alert-neutral.warning a, .rst-content .wy-alert-neutral.seealso a, .rst-content .wy-alert-neutral.admonition-todo a {
-  color: #2980B9;
+  color: #0f80aa;
 }
 
 .wy-alert p:last-child, .rst-content .note p:last-child, .rst-content .attention p:last-child, .rst-content .caution p:last-child, .rst-content .danger p:last-child, .rst-content .error p:last-child, .rst-content .hint p:last-child, .rst-content .important p:last-child, .rst-content .tip p:last-child, .rst-content .warning p:last-child, .rst-content .seealso p:last-child, .rst-content .admonition-todo p:last-child {
@@ -2650,7 +2650,7 @@ a .fa, a .wy-menu-vertical li span.toctree-expand, .wy-menu-vertical li a span.t
   background: #27AE60;
 }
 .wy-tray-container li.wy-tray-item-info {
-  background: #2980B9;
+  background: #0f80aa;
 }
 .wy-tray-container li.wy-tray-item-warning {
   background: #E67E22;
@@ -2725,7 +2725,7 @@ button[disabled] {
 }
 
 .btn-hover {
-  background: #2e8ece;
+  background: #1192c1;
   color: #fff;
 }
 
@@ -2780,10 +2780,10 @@ button[disabled] {
 }
 
 .btn-info {
-  background-color: #2980B9 !important;
+  background-color: #0f80aa !important;
 }
 .btn-info:hover {
-  background-color: #2e8ece !important;
+  background-color: #1192c1 !important;
 }
 
 .btn-neutral {
@@ -2828,18 +2828,18 @@ button[disabled] {
 
 .btn-link {
   background-color: transparent !important;
-  color: #2980B9;
+  color: #0f80aa;
   box-shadow: none;
   border-color: transparent !important;
 }
 .btn-link:hover {
   background-color: transparent !important;
-  color: #409ad5 !important;
+  color: #13a3d9 !important;
   box-shadow: none;
 }
 .btn-link:active {
   background-color: transparent !important;
-  color: #409ad5 !important;
+  color: #13a3d9 !important;
   box-shadow: none;
 }
 .btn-link:visited {
@@ -2894,7 +2894,7 @@ button[disabled] {
   cursor: pointer;
 }
 .wy-dropdown-menu > dd > a:hover {
-  background: #2980B9;
+  background: #0f80aa;
   color: #fff;
 }
 .wy-dropdown-menu > dd.divider {
@@ -2935,7 +2935,7 @@ button[disabled] {
   padding: 6px 12px;
 }
 .wy-dropdown.wy-dropdown-bubble .wy-dropdown-menu a:hover {
-  background: #2980B9;
+  background: #0f80aa;
   color: #fff;
 }
 
@@ -3379,7 +3379,7 @@ input[type="radio"][disabled], input[type="checkbox"][disabled] {
 }
 
 .wy-inline-validate.wy-inline-validate-info .wy-input-context {
-  color: #2980B9;
+  color: #0f80aa;
 }
 
 .rotate-90 {
@@ -3609,12 +3609,12 @@ input[type="radio"][disabled], input[type="checkbox"][disabled] {
 }
 
 a {
-  color: #2980B9;
+  color: #0f80aa;
   text-decoration: none;
   cursor: pointer;
 }
 a:hover {
-  color: #3091d1;
+  color: #1195c6;
 }
 a:visited {
   color: #9B59B6;
@@ -3671,11 +3671,11 @@ a.wy-text-warning:hover {
 }
 
 .wy-text-info {
-  color: #2980B9 !important;
+  color: #0f80aa !important;
 }
 
 a.wy-text-info:hover {
-  color: #409ad5 !important;
+  color: #13a3d9 !important;
 }
 
 .wy-text-success {
@@ -4215,6 +4215,9 @@ div[class^='highlight'] pre {
 .header-menu a:hover {
   color: white;
 }
+.header-menu a:visited {
+  color: #999999;
+}
 
 .header-menu .active {
   color: white;
@@ -4420,7 +4423,7 @@ div[class^='highlight'] pre {
   color: #b3b3b3;
 }
 .wy-menu-vertical a:active {
-  background-color: #2980B9;
+  background-color: #0f80aa;
   cursor: pointer;
   color: #fff;
 }
@@ -4446,14 +4449,14 @@ div[class^='highlight'] pre {
   width: 100%;
   border-radius: 5px;
   padding: 6px 12px;
-  border-color: #2472a4;
+  border-color: #0d6e93;
 }
 .wy-side-nav-search img {
   display: block;
   margin: auto auto 0.809em auto;
   height: 45px;
   width: 45px;
-  background-color: #2980B9;
+  background-color: #0f80aa;
   padding: 5px;
   border-radius: 100%;
 }
@@ -4467,6 +4470,9 @@ div[class^='highlight'] pre {
 }
 .wy-side-nav-search > a:hover, .wy-side-nav-search .wy-dropdown > a:hover {
   background: rgba(255, 255, 255, 0.1);
+}
+.wy-side-nav-search > a:visited, .wy-side-nav-search .wy-dropdown > a:visited {
+  color: #fff;
 }
 .wy-side-nav-search > a img.logo, .wy-side-nav-search .wy-dropdown > a img.logo {
   display: block;
@@ -4488,13 +4494,13 @@ div[class^='highlight'] pre {
 }
 
 .wy-nav .wy-menu-vertical header {
-  color: #2980B9;
+  color: #0f80aa;
 }
 .wy-nav .wy-menu-vertical a {
   color: #b3b3b3;
 }
 .wy-nav .wy-menu-vertical a:hover {
-  background-color: #2980B9;
+  background-color: #0f80aa;
   color: #fff;
 }
 
@@ -4559,7 +4565,7 @@ div[class^='highlight'] pre {
 
 .wy-nav-top {
   display: none;
-  background: #2980B9;
+  background: #0f80aa;
   color: #fff;
   padding: 0.4045em 0.809em;
   position: relative;
@@ -4583,7 +4589,7 @@ div[class^='highlight'] pre {
   margin-right: 12px;
   height: 45px;
   width: 45px;
-  background-color: #2980B9;
+  background-color: #0f80aa;
   padding: 5px;
   border-radius: 100%;
 }
@@ -4739,7 +4745,7 @@ footer span.commit code, footer span.commit .rst-content tt, .rst-content footer
   z-index: 400;
 }
 .rst-versions a {
-  color: #2980B9;
+  color: #0f80aa;
   text-decoration: none;
 }
 .rst-versions .rst-badge-small {
@@ -4776,7 +4782,7 @@ footer span.commit code, footer span.commit .rst-content tt, .rst-content footer
   color: #fff;
 }
 .rst-versions .rst-current-version.rst-active-old-version {
-  background-color: #F1C40F;
+  background-color: #E5B722;
   color: #000;
 }
 .rst-versions.shift-up .rst-other-versions {
@@ -5019,7 +5025,7 @@ footer span.commit code, footer span.commit .rst-content tt, .rst-content footer
   color: #404040;
 }
 .rst-content a tt, .rst-content a tt, .rst-content a code {
-  color: #2980B9;
+  color: #0f80aa;
 }
 .rst-content dl {
   margin-bottom: 24px;
@@ -5041,14 +5047,14 @@ footer span.commit code, footer span.commit .rst-content tt, .rst-content footer
   margin: 6px 0;
   font-size: 90%;
   line-height: normal;
-  background: #e7f2fa;
-  color: #2980B9;
-  border-top: solid 3px #6ab0de;
+  background: #bfe9f9;
+  color: #0f80aa;
+  border-top: solid 3px #32baed;
   padding: 6px;
   position: relative;
 }
 .rst-content dl:not(.docutils) dt:before {
-  color: #6ab0de;
+  color: #32baed;
 }
 .rst-content dl:not(.docutils) dt .headerlink {
   color: #404040;
@@ -5172,6 +5178,10 @@ span[id*='MathJax-Span'] {
   font-weight: 400;
   src: local("Proxima Nova"), local("ProximaNova-Reg-webfont"), url(../fonts/proxima_nova/ProximaNova-Reg-webfont.ttf) format("truetype");
 }
+a:visited {
+  color: #0f80aa;
+}
+
 h1 {
   font-size: 2.5em;
   font-weight: 100;
