Make default font the same as marketing site

--- a/sass/_theme_rst.sass
+++ b/sass/_theme_rst.sass
@@ -117,6 +117,10 @@
     &:hover .headerlink
       display: inline-block
 
+  ul, li,
+  font-size: 14px
+  line-height: 1.5
+
   // Sidebar content. You'll see at the bottom of this file I change it in mobile.
   .sidebar
     float: right
