--- a/sass/_theme_layout.sass
+++ b/sass/_theme_layout.sass
@@ -1,13 +1,12 @@
 .librato-header
-  height: 89px
   background-color: #252525
   padding-top: 15px
-  padding-left: 15px
 
 .header-menu 
   float: right
   padding-top: 8px
   padding-right: 20px
+  display: inline-block
   li
     display: inline-block
   a
@@ -22,7 +21,12 @@
       color: lighten($menu-vertical-background-color, 15%)
     &:visited
       color: #999999
-  
+
+.secound-menu
+  height: 60px
+  background-color: #1280A9
+  width: 100%
+
 
 .header-menu .active
   color: lighten($menu-vertical-background-color, 15%)
@@ -31,6 +35,7 @@
   width: 190px
   height: 59px
   margin-top: 6px
+  padding-left: 15px
 
 .wy-affix
   position: fixed
@@ -204,6 +209,7 @@
       +font-smooth
       span.toctree-expand
         color: $menu-link-active
+
 
 .wy-side-nav-search
   display: block
@@ -398,12 +404,29 @@ footer
     color: $text-medium
     font-size: 90%
 
++media(new-breakpoint(max-width 900px 8))
+  .header-menu
+    visibility: hidden
+    li
+      visibility: hidden
+      font-size: 10px
+      margin-left: 0px
+      display: none
+    .always-on
+      visibility: visible
+      display: inline-block
 
 +media($tablet)
   .wy-body-for-nav
     background: $section-background-color
   .wy-nav-top
     display: block
+  .librato-header
+    display: none
+  .header-menu
+    display: none
+    li
+      display: none
   .wy-nav-side
     @if $nav-desktop-position == left
       left: -$nav-desktop-width
