--- a/sass/_theme_librato.sass
+++ b/sass/_theme_librato.sass
@@ -1,5 +1,3 @@
-a:visited 
-  color: #0f80aa
 
 h1 
   font-size: 2.5em
@@ -54,3 +52,56 @@ h2
   font-size: 12px
   a
     color: #999
+
+.sub-nav
+  background-color: #1280A9
+  height: 60px
+  ul
+    list-style-type: none
+    float: left
+    margin: 0
+    padding: 0
+    overflow: hidden
+    margin-left: 5px
+    margin-right: 5px
+    padding-top: 15px
+  .active
+    border-bottom: 5px solid #1A9CC4
+  li 
+    float: left
+    margin-right: 15px
+    line-height: 40px
+    a
+      color: #fff
+      font-weight: bold
+      +font-smooth
+      padding: 20px
+      text-align: center
+      padding: 14px 16px
+      &:visited
+        color: #fff !important
+
+.search-box
+  float: right
+  padding-top: 15px
+  margin-right: 20px
+  .icon
+    padding: 6.5px
+    padding-left: 8px
+    margin-right: 0px
+    background-color: #4199BA
+    border-bottom-left-radius: 3px
+    border-top-left-radius: 3px
+    i 
+      color: #C4DFEA
+  .fa-search
+    color: #C4DFEA
+    font-size: 13px
+  input[type=text]
+    float: right
+
+
+// W3C School:  www.w3schools.com/css/tryit.asp?filename=trycss_float5
+
+a:visited 
+  color: #0f80aa
